#5: added new input for feed URL's so you can add/remove manga and get a new feed URL. Added some missed checks for 404s.
