# gen/restapi/operations/feedgen_view_manga_titles_responses.go
@@ -1,0 +1,128 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// FeedgenViewMangaTitlesOKCode is the HTTP code returned for type FeedgenViewMangaTitlesOK
+const FeedgenViewMangaTitlesOKCode int = 200
+
+/*FeedgenViewMangaTitlesOK OK response.
+
+swagger:response feedgenViewMangaTitlesOK
+*/
+type FeedgenViewMangaTitlesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *FeedgenViewMangaTitlesOKBody `json:"body,omitempty"`
+}
+
+// NewFeedgenViewMangaTitlesOK creates FeedgenViewMangaTitlesOK with default headers values
+func NewFeedgenViewMangaTitlesOK() *FeedgenViewMangaTitlesOK {
+
+	return &FeedgenViewMangaTitlesOK{}
+}
+
+// WithPayload adds the payload to the feedgen view manga titles o k response
+func (o *FeedgenViewMangaTitlesOK) WithPayload(payload *FeedgenViewMangaTitlesOKBody) *FeedgenViewMangaTitlesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the feedgen view manga titles o k response
+func (o *FeedgenViewMangaTitlesOK) SetPayload(payload *FeedgenViewMangaTitlesOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *FeedgenViewMangaTitlesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// FeedgenViewMangaTitlesNotFoundCode is the HTTP code returned for type FeedgenViewMangaTitlesNotFound
+const FeedgenViewMangaTitlesNotFoundCode int = 404
+
+/*FeedgenViewMangaTitlesNotFound Not Found response.
+
+swagger:response feedgenViewMangaTitlesNotFound
+*/
+type FeedgenViewMangaTitlesNotFound struct {
+}
+
+// NewFeedgenViewMangaTitlesNotFound creates FeedgenViewMangaTitlesNotFound with default headers values
+func NewFeedgenViewMangaTitlesNotFound() *FeedgenViewMangaTitlesNotFound {
+
+	return &FeedgenViewMangaTitlesNotFound{}
+}
+
+// WriteResponse to the client
+func (o *FeedgenViewMangaTitlesNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// FeedgenViewMangaTitlesInternalServerErrorCode is the HTTP code returned for type FeedgenViewMangaTitlesInternalServerError
+const FeedgenViewMangaTitlesInternalServerErrorCode int = 500
+
+/*FeedgenViewMangaTitlesInternalServerError Internal Server Error response.
+
+swagger:response feedgenViewMangaTitlesInternalServerError
+*/
+type FeedgenViewMangaTitlesInternalServerError struct {
+}
+
+// NewFeedgenViewMangaTitlesInternalServerError creates FeedgenViewMangaTitlesInternalServerError with default headers values
+func NewFeedgenViewMangaTitlesInternalServerError() *FeedgenViewMangaTitlesInternalServerError {
+
+	return &FeedgenViewMangaTitlesInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *FeedgenViewMangaTitlesInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
+
+// FeedgenViewMangaTitlesBadGatewayCode is the HTTP code returned for type FeedgenViewMangaTitlesBadGateway
+const FeedgenViewMangaTitlesBadGatewayCode int = 502
+
+/*FeedgenViewMangaTitlesBadGateway Bad Gateway response.
+
+swagger:response feedgenViewMangaTitlesBadGateway
+*/
+type FeedgenViewMangaTitlesBadGateway struct {
+}
+
+// NewFeedgenViewMangaTitlesBadGateway creates FeedgenViewMangaTitlesBadGateway with default headers values
+func NewFeedgenViewMangaTitlesBadGateway() *FeedgenViewMangaTitlesBadGateway {
+
+	return &FeedgenViewMangaTitlesBadGateway{}
+}
+
+// WriteResponse to the client
+func (o *FeedgenViewMangaTitlesBadGateway) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(502)
+}
